@@ -1,3 +1,4 @@
+  - moved strip from smarty core to plugin (Monte)
   - moved config_load from smarty core to plugin (Monte)
   - added &$repeat-paramter to block-functions (messju)
   - enabled hex-constants in function.math.php (messju)
